force-app/main/default/objects/Award__c/Award__c.object-meta.xml
<CustomObject>
    <description>Battleground award/reward config (BRD 20.1): coins for a game KPI.</description>
    <label>Award</label>
    <nameField>
        <displayFormat>AWD-{00000}</displayFormat>
        <label>Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>