force-app/main/default/objects/Award__c/fields/Battleground_KPI__c.field-meta.xml
<CustomField>
    <fullName>Battleground_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI</label>
    <referenceTo>Battleground_KPI__c</referenceTo>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>