force-app/main/default/objects/Award__c/fields/Coins__c.field-meta.xml
<CustomField>
    <fullName>Coins__c</fullName>
    <label>Coins</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>